--- a/Matplotlib.ipynb
+++ b/Matplotlib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "98b0d215-9e4f-4147-824d-0a673e3ef16b",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,9 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "#Group 17\n",
+    "#we can do it \n",
+    "#Student projects\n",
     "# Sample mining production data (simulated for demonstration)\n",
     "data = {\n",
     "    'Year': [2018, 2019, 2020, 2021, 2022],\n",
@@ -165,6 +167,15 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ac5f7e5",
+   "metadata": {},
+   "source": [
+    "g = 'miners'\n",
+    "print(g)"
    ]
   },
   {
